# RouteCraft

./: .docker.env  .gitignore  Dockerfile  build.sh  docker-compose.build.yml  docker-compose.yml  readme.md
.github/workflows/: ci.yml  release.yml
backend/: Cargo.toml  build.rs
backend/src/: main.rs
frontend/: .prettierrc.json  package-lock.json  package.json  webpack.common.js  webpack.config.cjs  webpack.dev.js  webpack.prod.js
frontend/src/: i18n.js  index.css  index.html  viewer.html  viewer.js  webpack.js
frontend/src/components/: json-editor.js  map-annotation-editor.js  map-annotation-layer.js  map-toolbox.js  osm-cache.js  osm-map.js  osm-route-editor.js  route-panel.js
scripts/: build.sh  phase1_spatial_index.cpp  phase1_split_ndjson.cpp  phase2_compact_ndjson.cpp
src/: app.js  index.css  index.html
src/components/: json-editor.js  osm-cache.js  osm-route-editor.js
tools/: CMakeLists.txt  count_osm.cpp  phase1_spatial_index.cpp  phase2_spatial_compact.cpp  spatial_cache_metadata.hpp
